fixed datpicker adn tablist z-index issue

--- a/src/scss/filejet-scss/entities/_entities-details-v1.scss
+++ b/src/scss/filejet-scss/entities/_entities-details-v1.scss
@@ -465,7 +465,7 @@ $font-sora: "Sora", sans-serif;
 .entitydetailstablist {
   position: relative;
   gap: rem(8);
-  z-index: 100;
+  z-index: 9;
 
   &::after {
     position: absolute;
