--- a/src/scss/filejet-style.css
+++ b/src/scss/filejet-style.css
@@ -22181,7 +22181,7 @@ body *::-webkit-scrollbar-thumb {
 .entitydetailstablist {
   position: relative;
   gap: 0.5rem;
-  z-index: 100;
+  z-index: 9;
 }
 .entitydetailstablist::after {
   position: absolute;
